--- a/flamerelay/templates/pages/home.html
+++ b/flamerelay/templates/pages/home.html
@@ -113,7 +113,7 @@
       </div>
     </div>
   </div>
-  <div class="mb-5 p-5 col-lg-8 mx-auto">
+  <div class="mb-5 py-5 col-lg-8 mx-auto">
     <div class="card border-primary">
       <div class="card-header">Want to help this project?</div>
       <div class="card-body">
